feat: US-SEO-001 - Technikai SEO audit (indexelhetőség, meta, canonical, hreflang, sitemap/robots)

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,7 +4,16 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>Bermuda Vendégház - Kikapcsolódás Somogy szívében</title>
+    <meta name="description" content="Bermuda Vendégház - Legyen szó baráti összejövetelről, családi pihenésről vagy különleges programokról, nálunk megtalálja. Fürdőtó, grill, off-road túrák és hagyományos falusi élmények." />
+    <meta property="og:title" content="Bermuda Vendégház - Kikapcsolódás Somogy szívében" />
+    <meta property="og:description" content="Bermuda Vendégház - Legyen szó baráti összejövetelről, családi pihenésről vagy különleges programokról, nálunk megtalálja. Fürdőtó, grill, off-road túrák és hagyományos falusi élmények." />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://bermunda-vendeghaz.hu/" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Bermuda Vendégház - Kikapcsolódás Somogy szívében" />
+    <meta name="twitter:description" content="Bermuda Vendégház - Legyen szó baráti összejövetelről, családi pihenésről vagy különleges programokról, nálunk megtalálja. Fürdőtó, grill, off-road túrák és hagyományos falusi élmények." />
+    <link rel="canonical" href="https://bermunda-vendeghaz.hu/" />
   </head>
   <body>
     <div id="root"></div>
