feat: US-021 - Rooms kártyák: lapozható képek (carousel)

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,16 +4,33 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
     <title>Bermuda Vendégház - Kikapcsolódás Somogy szívében</title>
-    <meta name="description" content="Bermuda Vendégház - Legyen szó baráti összejövetelről, családi pihenésről vagy különleges programokról, nálunk megtalálja. Fürdőtó, grill, off-road túrák és hagyományos falusi élmények." />
+    <meta
+      name="description"
+      content="Bermuda Vendégház - Legyen szó baráti összejövetelről, családi pihenésről vagy különleges programokról, nálunk megtalálja. Fürdőtó, grill, off-road túrák és hagyományos falusi élmények."
+    />
+
     <meta property="og:title" content="Bermuda Vendégház - Kikapcsolódás Somogy szívében" />
-    <meta property="og:description" content="Bermuda Vendégház - Legyen szó baráti összejövetelről, családi pihenésről vagy különleges programokról, nálunk megtalálja. Fürdőtó, grill, off-road túrák és hagyományos falusi élmények." />
+    <meta
+      property="og:description"
+      content="Bermuda Vendégház - Legyen szó baráti összejövetelről, családi pihenésről vagy különleges programokról, nálunk megtalálja. Fürdőtó, grill, off-road túrák és hagyományos falusi élmények."
+    />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://bermunda-vendeghaz.hu/" />
+    <meta property="og:url" content="https://bermuda-vendeghaz.hu/" />
+    <!-- opcionális, de ajánlott -->
+    <!-- <meta property="og:image" content="https://bermuda-vendeghaz.hu/og.jpg" /> -->
+
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Bermuda Vendégház - Kikapcsolódás Somogy szívében" />
-    <meta name="twitter:description" content="Bermuda Vendégház - Legyen szó baráti összejövetelről, családi pihenésről vagy különleges programokról, nálunk megtalálja. Fürdőtó, grill, off-road túrák és hagyományos falusi élmények." />
-    <link rel="canonical" href="https://bermunda-vendeghaz.hu/" />
+    <meta
+      name="twitter:description"
+      content="Bermuda Vendéghaz - Legyen szó baráti összejövetelről, családi pihenésről vagy különleges programokról, nálunk megtalálja. Fürdőtó, grill, off-road túrák és hagyományos falusi élmények."
+    />
+    <!-- opcionális, de ajánlott -->
+    <!-- <meta name="twitter:image" content="https://bermuda-vendeghaz.hu/og.jpg" /> -->
+
+    <link rel="canonical" href="https://bermuda-vendeghaz.hu/" />
   </head>
   <body>
     <div id="root"></div>
