--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,7 +2,12 @@
 <html lang="en" class="scroll-smooth">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" href="/favicon.ico" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <link rel="manifest" href="/site.webmanifest" />
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <title>Bermuda Vendégház - Kikapcsolódás Somogy szívében</title>
@@ -11,7 +16,10 @@
       content="Bermuda Vendégház - Legyen szó baráti összejövetelről, családi pihenésről vagy különleges programokról, nálunk megtalálja. Fürdőtó, grill, off-road túrák és hagyományos falusi élmények."
     />
 
-    <meta property="og:title" content="Bermuda Vendégház - Kikapcsolódás Somogy szívében" />
+    <meta
+      property="og:title"
+      content="Bermuda Vendégház - Kikapcsolódás Somogy szívében"
+    />
     <meta
       property="og:description"
       content="Bermuda Vendégház - Legyen szó baráti összejövetelről, családi pihenésről vagy különleges programokról, nálunk megtalálja. Fürdőtó, grill, off-road túrák és hagyományos falusi élmények."
@@ -22,7 +30,10 @@
     <!-- <meta property="og:image" content="https://bermuda-vendeghaz.hu/og.jpg" /> -->
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Bermuda Vendégház - Kikapcsolódás Somogy szívében" />
+    <meta
+      name="twitter:title"
+      content="Bermuda Vendégház - Kikapcsolódás Somogy szívében"
+    />
     <meta
       name="twitter:description"
       content="Bermuda Vendéghaz - Legyen szó baráti összejövetelről, családi pihenésről vagy különleges programokról, nálunk megtalálja. Fürdőtó, grill, off-road túrák és hagyományos falusi élmények."
