helmet provider removed + og.png meta and picture insert

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en" class="scroll-smooth">
+<html lang="hu" class="scroll-smooth">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" href="/favicon.ico" />
@@ -26,8 +26,7 @@
     />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://bermuda-vendeghaz.hu/" />
-    <!-- opcionális, de ajánlott -->
-    <!-- <meta property="og:image" content="https://bermuda-vendeghaz.hu/og.jpg" /> -->
+    <meta property="og:image" content="https://bermuda-vendeghaz.hu/og.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta
@@ -38,8 +37,7 @@
       name="twitter:description"
       content="Bermuda Vendéghaz - Legyen szó baráti összejövetelről, családi pihenésről vagy különleges programokról, nálunk megtalálja. Fürdőtó, grill, off-road túrák és hagyományos falusi élmények."
     />
-    <!-- opcionális, de ajánlott -->
-    <!-- <meta name="twitter:image" content="https://bermuda-vendeghaz.hu/og.jpg" /> -->
+    <meta name="twitter:image" content="https://bermuda-vendeghaz.hu/og.png" />
 
     <link rel="canonical" href="https://bermuda-vendeghaz.hu/" />
   </head>
