Update index.html SEO

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,6 +2,8 @@
 <html lang="hu" class="scroll-smooth">
   <head>
     <meta charset="UTF-8" />
+
+    <!-- Favicons -->
     <link rel="icon" href="/favicon.ico" />
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
@@ -10,16 +12,18 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>Bermuda Vendégház - Kikapcsolódás Somogy szívében</title>
+    <!-- Primary SEO -->
+    <title>Bermuda Vendégház</title>
     <meta
       name="description"
       content="Bermuda Vendégház - Legyen szó baráti összejövetelről, családi pihenésről vagy különleges programokról, nálunk megtalálja. Fürdőtó, grill, off-road túrák és hagyományos falusi élmények."
     />
+    <link rel="canonical" href="https://bermuda-vendeghaz.hu/" />
 
-    <meta
-      property="og:title"
-      content="Bermuda Vendégház - Kikapcsolódás Somogy szívében"
-    />
+    <!-- Open Graph -->
+    <meta property="og:site_name" content="Bermuda Vendégház" />
+    <meta property="og:locale" content="hu_HU" />
+    <meta property="og:title" content="Bermuda Vendégház" />
     <meta
       property="og:description"
       content="Bermuda Vendégház - Legyen szó baráti összejövetelről, családi pihenésről vagy különleges programokról, nálunk megtalálja. Fürdőtó, grill, off-road túrák és hagyományos falusi élmények."
@@ -28,19 +32,16 @@
     <meta property="og:url" content="https://bermuda-vendeghaz.hu/" />
     <meta property="og:image" content="https://bermuda-vendeghaz.hu/og.png" />
 
+    <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta
-      name="twitter:title"
-      content="Bermuda Vendégház - Kikapcsolódás Somogy szívében"
-    />
+    <meta name="twitter:title" content="Bermuda Vendégház" />
     <meta
       name="twitter:description"
-      content="Bermuda Vendéghaz - Legyen szó baráti összejövetelről, családi pihenésről vagy különleges programokról, nálunk megtalálja. Fürdőtó, grill, off-road túrák és hagyományos falusi élmények."
+      content="Bermuda Vendégház - Legyen szó baráti összejövetelről, családi pihenésről vagy különleges programokról, nálunk megtalálja. Fürdőtó, grill, off-road túrák és hagyományos falusi élmények."
     />
     <meta name="twitter:image" content="https://bermuda-vendeghaz.hu/og.png" />
-
-    <link rel="canonical" href="https://bermuda-vendeghaz.hu/" />
   </head>
+
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
