welcome page bg loading fix

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -40,6 +40,12 @@
       content="Bermuda Vendégház - Legyen szó baráti összejövetelről, családi pihenésről vagy különleges programokról, nálunk megtalálja. Fürdőtó, grill, off-road túrák és hagyományos falusi élmények."
     />
     <meta name="twitter:image" content="https://bermuda-vendeghaz.hu/og.png" />
+
+    <!-- Prevent white/gray flash before hero loads -->
+    <style>
+      html { background: #111827; }
+      #root { background: #fff; }
+    </style>
   </head>
 
   <body>
